slightly posher hamburger

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<HEAD>
+<html>
+<head>
+    <link href="lib/layout.linaria.module.css" rel="stylesheet">
     <link href="lib/hamburgers.min.css" rel="stylesheet">
-</HEAD>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
     <H1> Here we are in HTML!</H1>
     <p>Let's try a Hamburger</p>
